src/Tests/Spectre.Console.Tests/Expectations/Cli/Parsing/UnknownOption/Test_1.Output.verified.txt
Error: Unknown option 'unknown'.

       dog --unknown
           ^^^^^^^^^ Unknown option